<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_monitor"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_latest"
        android:icon="@drawable/ic_launch"
        android:title="@string/all_launches" />

    <item
        android:id="@+id/navigation_rockets"
        android:icon="@drawable/ic_rocket"
        android:title="@string/title_rockets" />

<!--    <item-->
<!--        android:id="@+id/navigation_dragons"-->
<!--        android:icon="@drawable/ic_dashboard_black_24dp"-->
<!--        android:title="@string/title_dragons" />-->

</menu>
