<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:background="@color/black"
    >
          <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:id="@+id/container2"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:id="@+id/image_detail_launch"
                android:scaleType="fitXY"
                android:layout_marginTop="16dp"
                android:src="@drawable/falconsat01"
                android:layout_gravity="center"
                />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="ROCKET"
                  android:textColor="#FF003D"
                  android:textSize="16sp"
                  android:layout_marginTop="20dp"
                  />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/text_launch_rocket"
                  android:text="@string/rocket_name"
                  android:textColor="@color/white"
                  android:textSize="16sp"
                  android:layout_marginTop="4dp"
                  />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LAUNCH DATE"
                android:textColor="#FF003D"
                android:textSize="16sp"
                android:layout_marginTop="20dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_details_launch_date_upcoming"
                android:text="@string/rocket_name"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_marginTop="4dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LAUNCH SITE"
                android:textColor="#FF003D"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_launch_site_value"
                android:text="@string/rocket_lauch_date"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginTop="4dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LAUCH STATUS"
                android:textColor="#FF003D"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_details_launch_status"
                android:text="@string/rocket_lauch_status"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_marginTop="4dp"
                />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="DETAILS"
                  android:textColor="#FF003D"
                  android:textSize="16sp"
                  android:layout_marginTop="15dp"
                  />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/text_details_launch"
                  android:text="@string/rocket_lauch_status"
                  android:textColor="@color/white"
                  android:textSize="18sp"
                  android:layout_marginTop="4dp"
                  />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="ROCKET SUMMARY"
                  android:textColor="#FF003D"
                  android:textSize="16sp"
                  android:layout_marginTop="15dp"
                  />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/text_details_launch_summary"
                  android:text="@string/rocket_lauch_symmary"
                  android:textColor="@color/white"
                  android:textSize="18sp"
                  android:layout_marginTop="4dp"
                  />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="TYPE"
                  android:textColor="#FF003D"
                  android:textSize="16sp"
                  android:layout_marginTop="15dp"
                  />

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:id="@+id/text_details_launch_type"
                  android:text="@string/rocket_lauch_type"
                  android:textColor="@color/white"
                  android:textSize="18sp"
                  android:layout_marginTop="4dp"
                  />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="FIRST STAGE"
                    android:textColor="#FF003D"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_details_launch_firt_stage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@string/rocket_lauch_first_stage"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:paddingTop="20dp"
                android:id="@+id/container4"
                android:orientation="vertical"
                android:gravity="right"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SECOND STAGE"
                    android:textColor="#FF003D"
                    android:textSize="16sp"
                    android:layout_marginTop="15dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_details_launch_second_stage"
                    android:text="@string/rocket_lauch_second_stage"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:layout_marginTop="4dp"
                    />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:orientation="vertical"
                android:paddingTop="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="YOUTUBE"
                    android:textColor="#FF003D"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/text_details_launch_firt_youtube"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/btn_yt"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:orientation="vertical"
                android:layout_gravity="right"
                android:gravity="right"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="REDIT"
                    android:textColor="#FF003D"
                    android:textSize="16sp"
                    android:layout_marginTop="15dp"
                    />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_details_launch_reddit"
                    android:layout_marginTop="4dp"
                    android:src="@drawable/btn_reddit"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>



              <View
                android:layout_width="match_parent"
                android:layout_height="50dp" />
        </LinearLayout>
</androidx.core.widget.NestedScrollView>
