<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="10dp"
        app:cardCornerRadius="8dp"
        app:cardPreventCornerOverlap="false"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="20dp"
            >

            <ImageView
                android:layout_width="85dp"
                android:layout_height="85dp"
                android:id="@+id/image_launch"
                android:scaleType="fitXY"
                android:layout_marginTop="6dp"
                android:src="@drawable/falconsat01"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:id="@+id/container1"
                android:layout_marginLeft="20dp"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="LAUNCH"
                    android:textStyle="bold"
                    android:textColor="#FF003D"
                    android:textSize="10sp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_launch_title"
                    android:text="@string/rocket_name"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:layout_marginTop="4dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_launch_model"
                    android:text="@string/rocket_model"
                    android:textColor="#000"
                    android:textSize="12sp"
                    android:layout_marginTop="4dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_launch_date"
                    android:text="@string/rocket_lauch_date"
                    android:textColor="#000"
                    android:textSize="12sp"
                    android:layout_marginTop="4dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:id="@+id/container2"
        android:layout_marginLeft="20dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LAUNCH DATE"
            android:textColor="#FF003D"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_launch_date_upcoming"
            android:text="@string/rocket_name"
            android:textColor="#000"
            android:textSize="16sp"
            android:layout_marginTop="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LAUNCH SITE"
            android:textColor="#FF003D"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_launch_site_value"
            android:text="@string/rocket_lauch_date"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_marginTop="4dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="COUNT DOWN"
            android:textColor="#FF003D"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_launch_count_down"
            android:text="@string/rocket_lauch_date"
            android:textColor="#000"
            android:textSize="18sp"
            android:layout_marginTop="4dp"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
